// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BankAccountNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Numer konta bankowego
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="bankAccountNumberField"
          label="Numer konta bankowego"
          name="name"
          placeholder="Numer konta bankowego"
          value="test"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podany numer konta jest nieprawidłowy
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="bankAccountNumberField"
  label="Numer konta bankowego"
  name="name"
  placeholder="Numer konta bankowego"
  value=""
/>
`;

exports[`<BankAccountNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<BankAccountNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="bankAccountNumberField"
          label="Test"
          name="name"
          placeholder="Numer konta bankowego"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
